# lamedh

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Lamedh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lamedh/: bidict.py  cli.py  expr.py  help.txt  terminal.py  tree.py  visitors.py
lamedh/expr/: __init__.py  applicative.py  expr.py
lamedh/parsing/: lambda_lark.py  parsing.py  simple.py
prelude/: basic.lmd  bool.lmd
tests/: test_eval_normal.py  test_lambda_expr.py  test_parsing.py  test_terminal.py
